<resources>
    <string name="app_name">WASHME</string>
    <string name="hoje">Hoje</string>
    <string name="servicos">Services</string>
    <string name="calendar">Calendar</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="desc">desc</string>
    <string name="signup">Criar Conta</string>
    <string name="create_account">Criar uma conta</string>
    <string name="aceitar">Aceitar</string>
    <string name="recusar">Recusar</string>
    <string name="tipo_de_servico">Tipo de servico</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
