<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/pretofundo">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="username"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="password"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:background="@android:color/black"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/signupButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerInParent="true"
        android:text="@string/create_account"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc" />

</RelativeLayout>